force-app/main/default/objects/Cartera_Importe__c/fields/Cliente_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Descripcion__c</fullName>
    <label>Cliente (Descripcion)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>