force-app/main/default/objects/Cartera_Importe__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <description>Factura</description>
    <label>Documento</label>
    <length>15</length>
    <type>Text</type>
</CustomField>