force-app/main/default/objects/Cartera_Importe__c/fields/Fecha_Factura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Factura__c</fullName>
    <label>Fecha Factura</label>
    <type>Date</type>
</CustomField>