force-app/main/default/objects/Cartera_Importe__c/fields/Importe_Cobrado__c.field-meta.xml
<CustomField>
    <fullName>Importe_Cobrado__c</fullName>
    <label>Importe Cobrado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>