force-app/main/default/objects/Cartera_Importe__c/fields/Importe_Pendiente_EUR__c.field-meta.xml
<CustomField>
    <fullName>Importe_Pendiente_EUR__c</fullName>
    <label>Importe Pendiente EUR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>