force-app/main/default/objects/Cartera_Importe__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>PedidoDeCompra__c</referenceTo>
    <relationshipLabel>Cartera Importes</relationshipLabel>
    <relationshipName>Cartera_Importes</relationshipName>
    <type>Lookup</type>
</CustomField>