force-app/main/default/objects/Cartera_Importe__c/fields/Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Sociedad__c</fullName>
    <label>Sociedad</label>
    <length>2</length>
    <type>Text</type>
</CustomField>