force-app/main/default/objects/Cartera_Importe__c/fields/Tipo_Archivo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Archivo__c</fullName>
    <label>Tipo Archivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>