force-app/main/default/objects/Cartera_Importe__c/fields/Tipo_Transaccion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Transaccion__c</fullName>
    <label>Tipo Transaccion</label>
    <length>5</length>
    <type>Text</type>
</CustomField>